--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ input[type="text"] {
     }
 
     .meal {
-        height: 300px;
-        width: 300px;
+        height: 90%;
+        width: 90%;
     }
 }
